Analyze only matching env context

--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -65,6 +65,7 @@ RUN set -eux && \
   apt install -y openjdk-17-jdk
 
 ENV INGA_HOME /
+ENV INGA_CONTEXT java
 ENV INGA_DEBUG 1
 
 ENTRYPOINT ["inga"]
