--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,19 +35,18 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     container: ghcr.io/seachicken/inga:latest-typescript
-    env:
-      LISP: ${{ matrix.lisp }}
 
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0
         submodules: recursive
-    - uses: 40ants/setup-lisp@v2
-      with:
-        asdf-system: inga
-    - uses: 40ants/run-tests@v2
-      with:
-        run-tests: |
+    - name: Install Roswell
+      env:
+        LISP: ${{ matrix.lisp }}
+      run: |
+        curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
+    - name: Run tests
+        run: |
+          PATH="~/.roswell/bin:$PATH"
           (ql:quickload :inga/test-typescript)
           (asdf:test-system :inga/test-typescript)
