--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,17 @@ jobs:
         lisp: [sbcl-bin]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
-    env:
-      LISP: ${{ matrix.lisp }}
 
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
         submodules: recursive
-    - uses: 40ants/setup-lisp@v2
-      with:
-        asdf-system: inga
-    - uses: 40ants/run-tests@v2
-      with:
-        asdf-system: inga
+    - name: Install Roswell
+      env:
+        LISP: ${{ matrix.lisp }}
+      run: |
+        curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
 
   test-typescript:
     strategy:
