--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,20 @@ jobs:
         lisp: [sbcl-bin]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
+    env:
+      LISP: ${{ matrix.lisp }}
 
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
         submodules: recursive
-    - name: Install Roswell
-      env:
-        LISP: ${{ matrix.lisp }}
-      run: |
-        curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
+    - uses: 40ants/setup-lisp@v2
+      with:
+        asdf-system: inga
+    - uses: 40ants/run-tests@v2
+      with:
+        asdf-system: inga
 
   test-typescript:
     strategy:
@@ -32,12 +35,22 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     container: ghcr.io/seachicken/inga:latest-typescript
+    env:
+      LISP: ${{ matrix.lisp }}
 
     steps:
+    - name: Install dependencies
+      - run: |
+        apt install sudo
     - uses: actions/checkout@v3
       with:
+        fetch-depth: 0
         submodules: recursive
-    - name: Run tests
-      run: |
-        (ql:quickload :inga/test-typescript)
-        (asdf:test-system :inga/test-typescript)
+    - uses: 40ants/setup-lisp@v2
+      with:
+        asdf-system: inga
+    - uses: 40ants/run-tests@v2
+      with:
+        run-tests: |
+          (ql:quickload :inga/test-typescript)
+          (asdf:test-system :inga/test-typescript)
