--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        PATH="~/.roswell/bin:$PATH"
+        echo "~/.roswell/bin" >> $GITHUB_PATH
         apt install sudo
     - uses: actions/checkout@v3
       with:
