--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,10 @@ jobs:
     - uses: 40ants/setup-lisp@v2
       with:
         asdf-system: inga
+    - name: log
+      run: |
+        echo $GITHUB_PATH
+        ll /root/.roswell/bin
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
