--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        echo "~/.roswell/bin" >> $GITHUB_PATH
+        echo "~/.roswell/bin" >> ~/.bashrc
         apt install sudo
     - uses: actions/checkout@v3
       with:
@@ -50,10 +50,10 @@ jobs:
     - uses: 40ants/setup-lisp@v2
       with:
         asdf-system: inga
-    - name: log
-      run: |
-        echo $GITHUB_PATH
-        ls -lsa /root/.roswell/bin
+        #- name: log
+        #  run: |
+        #    echo $GITHUB_PATH
+        #    ls -lsa /root/.roswell/bin
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
