--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        echo "~/.roswell/bin" >> ~/.bashrc
+        echo "export PATH=~/.roswell/bin:$PATH" >> ~/.bashrc
         apt install sudo
     - uses: actions/checkout@v3
       with:
