--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,29 +35,26 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     container: ghcr.io/seachicken/inga:latest-typescript
+      options: --workdir ${{ GITHUB_WORKSPACE }}
     env:
       LISP: ${{ matrix.lisp }}
 
     steps:
     - name: Install dependencies
       run: |
-        export PATH=/root/.roswell/bin:$PATH
+        echo ${{ GITHUB_WORKSPACE }}
+        #export PATH=/root/.roswell/bin:$PATH
         apt install sudo
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0
         submodules: recursive
     - uses: 40ants/setup-lisp@v2
       with:
         asdf-system: inga
-    - name: debug
-      run: |
-        echo $PATH
-        /root/.roswell/bin/qlot exec ros install svetlyak40wt/cl-coveralls/github-actions
-        #- name: log
-        #  run: |
-        #    echo $GITHUB_PATH
-        #    ls -lsa /root/.roswell/bin
+    #- name: log
+    #  run: |
+    #    echo $GITHUB_PATH
+    #    ls -lsa /root/.roswell/bin
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
