--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     container:
       image: ghcr.io/seachicken/inga:latest-typescript
-      env:
-        HOME: ${{ github.workspace }}
-      options: --workdir ${{ github.workspace }}
+      #env:
+      #  HOME: ${{ github.workspace }}
+      options: --workdir ${{ github.workspace }} --env HOME=${{ github.workspace }}
     env:
       LISP: ${{ matrix.lisp }}
 
