--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,32 +35,19 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/seachicken/inga:0.1.27-pre0-typescript
+      image: ghcr.io/seachicken/inga:0.1.30-pre0-typescript-build
       #env:
       #  HOME: ${{ github.workspace }}
       #options: --workdir ${{ github.workspace }} --env HOME=${{ github.workspace }}
-    env:
-      LISP: ${{ matrix.lisp }}
 
     steps:
-    - name: Install dependencies
-      run: |
-        #echo "HOME=${{ github.workspace }}" >> $GITHUB_ENV
-        #export PATH=/root/.roswell/bin:$PATH
-        apt install sudo
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    - uses: 40ants/setup-lisp@v2
-      with:
-        asdf-system: inga
-    #- name: log
-    #  run: |
-    #    echo $GITHUB_PATH
-    #    ls -lsa /root/.roswell/bin
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
         run-tests: |
-          (ql:quickload :inga/test-typescript)
-          (asdf:test-system :inga/test-typescript)
+          #ros -s fiveam -e '(ql:quickload :inga) (asdf:test-system :inga/test-typescript)'
+          ros -s fiveam -e '(asdf:test-system :inga/test-typescript)'
+
