--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Checkout submodules
-      run: |
-        git submodule update --init
+      #- name: Checkout submodules
+      #  run: |
+      #    git submodule update --init
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
