--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       #- name: Checkout submodules
       #  run: |
       #    git submodule update --init
+    - uses: 40ants/setup-lisp@v2
+      with:
+        asdf-system: inga
     - uses: 40ants/run-tests@v2
       with:
         asdf-system: inga
