--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,13 +45,8 @@ jobs:
       #- name: Checkout submodules
       #  run: |
       #    git submodule update --init
-    - uses: 40ants/setup-lisp@v2
-      with:
-        asdf-system: inga
-    - uses: 40ants/run-tests@v2
-      with:
-        asdf-system: inga
-        run-tests: |
-          #ros -s fiveam -e '(ql:quickload :inga) (asdf:test-system :inga/test-typescript)'
-          ros -s fiveam -e '(asdf:test-system :inga/test-typescript)'
+    - name: Run tests
+      run:
+        #ros -s fiveam -e '(ql:quickload :inga) (asdf:test-system :inga/test-typescript)'
+        ros -s fiveam -e '(asdf:test-system :inga/test-typescript)'
 
