--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,5 @@ jobs:
       #    git submodule update --init
     - name: Run tests
       run:
-        #ros -s fiveam -e '(ql:quickload :inga) (asdf:test-system :inga/test-typescript)'
-        ros -s fiveam -e '(asdf:test-system :inga/test-typescript)'
+        ros -s fiveam -e '(ql:quickload :inga) (asdf:test-system :inga/test-typescript)'
 
