--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Run tests
       run:
         ros -s fiveam -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
-                              (ql:quickload :inga/test-typescript))
+                              (ql:quickload :inga))
                             (handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
                               (or (fiveam:run! :parser/typescript)
                                   (uiop:quit 1)))'
