--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       #  run: |
       #    git submodule update --init
     - name: Run tests
-      run:
+      run: |
         ls -lsa test/fixtures/react-typescript-todo
         ros -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
                   (asdf:load-system :inga)
