--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,5 @@ jobs:
         submodules: recursive
     - name: Run tests
       run: |
-        ros -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
-                  (asdf:load-system :inga)
-                  (asdf:test-system :inga/test-typescript))'
+        ros -e '(asdf:test-system :inga/test-typescript)'
 
