--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,8 @@ jobs:
         submodules: recursive
     - name: Run tests
       run: |
-        ros -e '(asdf:test-system :inga/test-typescript)'
+        ros -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
+                  (asdf:load-system :inga)
+                  (asdf:load-system :inga/test-typescript)
+                  (asdf:test-system :inga/test-typescript))'
 
