--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/seachicken/inga:0.1.30-pre0-typescript-build
+      image: ghcr.io/seachicken/inga:0.1.30-pre0-typescript
 
     steps:
     - name: Install git
