--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,14 @@ jobs:
       image: ghcr.io/seachicken/inga:0.1.30-pre0-typescript
 
     steps:
-    - name: Install git
-      run: |
-        apt install -y git
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+    - name: Install Roswell
+      env:
+        LISP: ${{ matrix.lisp }}
+      run: |
+        curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
     - name: Run tests
       run: |
         ros -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
