--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,5 +53,6 @@ jobs:
       run: |
         ros -s fiveam -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
                             (ql:quickload :inga)
-                            (fiveam:run! :typescript))'
+                            (fiveam:run! (find-symbol* '#:typescript
+                                                       :inga/test/parser/typescript)))'
 
