--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,8 @@ jobs:
       run: ros install fiveam
     - name: Run tests
       run: |
-        ros -s fiveam -e '(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
+        ros -s fiveam -e "(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
                             (ql:quickload :inga)
                             (fiveam:run! (find-symbol* '#:typescript
-                                                       :inga/test/parser/typescript)))'
+                                                       :inga/test/parser/typescript)))"
 
