--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,6 @@ jobs:
       run: |
         ros -s fiveam -e "(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
                             (ql:quickload :inga)
-                            (fiveam:run! (find-symbol* '#:typescript
-                                                       :inga/test/parser/typescript)))"
+                            (fiveam:run! (uiop:find-symbol* '#:typescript
+                                                            :inga/test/parser/typescript)))"
 
