--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,9 +51,9 @@ jobs:
       run: ros install fiveam
     - name: Run tests
       run: |
-        ros -s fiveam -e "(handler-bind ((error (lambda (c) (print c) (uiop:quit 1))))
-                            (ql:quickload :inga)
-                            (ql:quickload :inga/test-typescript)
-                            (fiveam:run! (uiop:find-symbol* '#:typescript
-                                                            :inga/test/parser/typescript)))"
+        ros -s fiveam -e "(ql:quickload :inga)
+                          (ql:quickload :inga/test-typescript)
+                          (or (fiveam:run! (uiop:find-symbol* '#:typescript
+                                                              :inga/test/parser/typescript))
+                              (error 'Tests failed'))"
 
