--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -1,4 +1,4 @@
-name: build
+name: Build and scan a Docker image
 
 on:
   pull_request:
@@ -28,10 +28,10 @@ jobs:
           image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest-${{ matrix.target }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          #severity: 'CRITICAL,HIGH'
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
+          #- name: Upload Trivy scan results to GitHub Security tab
+          #  uses: github/codeql-action/upload-sarif@v2
+          #  with:
+          #    sarif_file: 'trivy-results.sarif'
 
