--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -1,8 +1,6 @@
-name: Build and scan a Docker image
+name: Scan Docker images
 
 on:
-  pull_request:
-    branches: [ "main" ]
   schedule:
     - cron: '22 15 * * 1'
 
@@ -28,10 +26,10 @@ jobs:
           image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest-${{ matrix.target }}'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          #severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL,HIGH'
 
-          #- name: Upload Trivy scan results to GitHub Security tab
-          #  uses: github/codeql-action/upload-sarif@v2
-          #  with:
-          #    sarif_file: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
 
