--- a/docker/typescript/Dockerfile
+++ b/docker/typescript/Dockerfile
@@ -3,22 +3,18 @@ FROM fukamachi/roswell:21.10.14.111-ubuntu AS build
 ARG VERSION
 ARG DEBIAN_FRONTEND=noninteractive
 
-RUN set -eux && \
-  apt-get update && \
+RUN apt-get update && \
   apt-get install -y curl
 
 # https://github.com/cli/cli/blob/trunk/docs/install_linux.md#installing-gh-on-linux-and-bsd
-RUN set -eux && \
-  curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg && \
+RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg && \
   chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
 
 RUN mkdir /tmp/inga
 
-RUN set -eux && \
-  curl -o /tmp/inga/setup_node -fsSL https://deb.nodesource.com/setup_lts.x
+RUN curl -o /tmp/inga/setup_node -fsSL https://deb.nodesource.com/setup_lts.x
 
-RUN set -eux && \
-  curl -o ./inga.tar.gz -L https://github.com/seachicken/inga/archive/refs/tags/$VERSION.tar.gz && \
+RUN curl -o ./inga.tar.gz -L https://github.com/seachicken/inga/archive/refs/tags/$VERSION.tar.gz && \
   mkdir inga && \
   tar xvf ./inga.tar.gz -C ./inga --strip-components 1 && \
   ros && \
@@ -32,15 +28,16 @@ COPY --from=build /usr/share/keyrings/githubcli-archive-keyring.gpg /usr/share/k
 COPY --from=build /tmp/inga /tmp/inga
 COPY --from=build /inga/roswell/inga /usr/local/bin/
 
-RUN set -eux && \
-  apt-get update && \
-  apt-get install -y git && \
-  bash /tmp/inga/setup_node && apt-get install -y nodejs
+RUN bash /tmp/inga/setup_node
 
-RUN set -eux && \
-  echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
-  apt update && \
-  apt install -y gh
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
+  apt-get update && \
+  apt-get install -y \
+    git \
+    gh \
+    nodejs && \
+  apt-get clean && \
+  rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g typescript @seachicken/tsparser
 
