--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -34,6 +34,9 @@ COPY --from=build /usr/share/keyrings/githubcli-archive-keyring.gpg /usr/share/k
 COPY --from=build /libs /libs
 COPY --from=build /inga/roswell/inga /usr/local/bin/
 
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
 RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
   apt-get update && \
   apt-get install -y \
