--- a/docker/typescript/Dockerfile
+++ b/docker/typescript/Dockerfile
@@ -30,6 +30,9 @@ COPY --from=build /inga/roswell/inga /usr/local/bin/
 
 RUN bash /tmp/inga/setup_node
 
+RUN apt-get update && \
+  apt-get install -y ca-certificates
+
 RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
   apt-get update && \
   apt-get install -y \
