Build repository sources with Dockerfile

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: ./docker/${{ matrix.target }}
-          build-args: VERSION=${{ github.ref_name }}
+          context: .
+          file: ./docker/${{ matrix.target }}/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
