--- a/docker/typescript/Dockerfile
+++ b/docker/typescript/Dockerfile
@@ -1,6 +1,5 @@
 FROM fukamachi/roswell:21.10.14.111-ubuntu AS build
 
-ARG VERSION
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
@@ -14,10 +13,8 @@ RUN mkdir /tmp/inga
 
 RUN curl -o /tmp/inga/setup_node -fsSL https://deb.nodesource.com/setup_lts.x
 
-RUN curl -o ./inga.tar.gz -L https://github.com/seachicken/inga/archive/refs/tags/$VERSION.tar.gz && \
-  mkdir inga && \
-  tar xvf ./inga.tar.gz -C ./inga --strip-components 1 && \
-  ros && \
+COPY ../.. /inga
+RUN ros && \
   cd ~/.roswell/local-projects && ln -s /inga inga && \
   ros build /inga/roswell/inga.ros
 
